oss-knowledge-gitops/backend/embedding-server/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: embedding-server
spec:
  rules:
  - host: oss-knowledge-embedding-dev.4.230.158.187.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-embedding-server
            port:
              number: 8000
